# search-harvester

./: LICENSE  README.md  pyproject.toml
app/: dependencies.py  main.py  models.py  settings.py
app/scraper/: client.py
app/search_engines/: __init__.py  base.py  duckduckgo.py
app/utils/: cache.py  logging_config.py  metrics.py
